# model_encryption

./: .gitignore  CMakeLists.txt  README.md
include/: paddle_model_decrypt.h  paddle_model_encrypt.h  paddle_stream_decrypt.h
samples/: model_decrypt_sample.cpp
src/: paddle_model_decrypt.cpp  paddle_model_encrypt.cpp  paddle_stream_decrypt.cpp
util/include/crypto/: aes_gcm.h
util/src/: io_utils.cpp  system_utils.cpp
util/src/crypto/: aes_gcm.cpp  base64.cpp  basic.cpp  sha256_utils.cpp
